# plainweave

./: .filigree.conf  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  loomweave.yaml  pyproject.toml
.claude/: settings.json
.claude/skills/plainweave-workflow/: SKILL.md
.github/workflows/: ci.yml  release.yml  site.yml
docs/: MODULE-MAP.md  README.md  agentic-doors-replacement-roadmap.md  concept.md
docs/arch-analysis-2026-06-21-1754/: 00-coordination.md  01-discovery-findings.md  02-subsystem-catalog.md  03-diagrams.md  04-final-report.md  05-quality-assessment.md  06-architect-handover.md
docs/arch-analysis-2026-06-21-1754/temp/: validation-catalog.md
docs/arch-analysis-2026-06-28-0751/: 00-coordination.md  01-discovery-findings.md  02-subsystem-catalog.md  03-diagrams.md  04-final-report.md  05-quality-assessment.md  06-architect-handover.md
docs/arch-analysis-2026-06-28-0751/temp/: catalog-E1.md  catalog-E2.md  catalog-E3.md  catalog-E4.md  catalog-E5.md  dependency-reconciliation.md  validation-catalog.md  validation-synthesis.md
docs/architecture/decisions/: ADR-001-charter-authority-boundary.md  ADR-002-requirement-identity-drafts-immutable-versions.md  ADR-003-trace-link-ontology-authority-states.md  ADR-004-cli-mcp-json-envelope-error-policy.md  ADR-005-clarion-sei-consumer-contract.md  ADR-006-legis-preflight-fact-envelope.md  README.md
docs/design/: 2026-06-21-loomweave-catalog-http-counterpart.md
docs/handoffs/: 2026-06-27-wardline-scan-identity-metadata.md  2026-06-27-warpline-interface-lock-item-schema.md  2026-06-27-warpline-requirements-enrichment-consumer.md  2026-06-28-lacuna-peer-facts-tour-demos-tasking.md  2026-06-28-warpline-requirements-enrichment-consumer-impl.md  2026-06-28-web-ux-design-review.md  2026-06-29-filigree-linked-work-facts.md
docs/product/: beta-charter.md  current-state.md  metrics.md  roadmap.md  vision.md
docs/product/decisions/: PDR-001-code-up-refocus.md  PDR-002-suite-candidate-boundary.md  PDR-003-defer-semantic-similarity.md  PDR-004-cross-member-seam-policy.md  PDR-005-beta-candidate-gate-met-on-self-dogfood.md  PDR-006-north-star-coverage-blocked.md  PDR-007-dogfood-corpus-local-only.md  PDR-008-cross-member-seam-validated-on-live-peers.md  PDR-009-intent-coverage-accepted-north-star-self-computable.md  PDR-010-lacuna-intent-regression-harness.md  PDR-011-doctor-federation-parity.md  PDR-012-plainweave-1.0-released.md  PDR-013-operator-web-ui-ratified.md  PDR-014-peer-facts-wardline-warpline.md  PDR-015-cli-peer-facts-parity.md  PDR-016-web-ux-a11y-overhaul-delivered.md  PDR-017-requirements-enrichment-producer-gated-live.md  PDR-018-seam-hardening-blockers-345.md  PDR-019-release-1.2.0-pypi.md  PDR-020-error-legibility-1.2.1.md
docs/prompts/: imp.md
docs/reviews/: 2026-06-05-mcp-read-surface-first-principles-review.md  2026-06-06-agent-first-and-federation-evaluation.md  2026-06-06-defect-register.md
docs/solution-architecture/: plainweave-beta.md
docs/superpowers/plans/: 2026-06-04-charter-v0.1-local-core.md  2026-06-04-charter-v0.1-work-package-execution-guide.md  2026-06-05-charter-requirement-dossiers.md  2026-06-05-charter-verification-status.md  2026-06-25-plainweave-webux-mvp.md  2026-06-27-peer-facts-wardline-warpline.md  2026-06-28-lacuna-peer-facts-tour-cli-parity.md
docs/superpowers/specs/: 2026-06-04-charter-contract-fixture-plan.md  2026-06-04-charter-interface-contract-hardening.md  2026-06-04-charter-sdlc-readiness-package.md  2026-06-04-charter-v0.1-product-design.md  2026-06-04-charter-v0.1-quality-gates.md  2026-06-04-charter-v0.1-traceability-matrix.md  2026-06-05-charter-agentic-mcp-interface-design.md  2026-06-05-charter-requirement-dossiers-design.md  2026-06-05-charter-verification-status-design.md  2026-06-25-plainweave-webux-design.md  2026-06-27-peer-facts-wardline-warpline-design.md  2026-06-28-lacuna-peer-facts-tour-cli-parity-design.md
site/: astro.config.mjs  package-lock.json  package.json
site/public/: CNAME
site/src/pages/: index.astro
src/charter/: __init__.py  __main__.py  cli.py  cli_commands.py  envelopes.py  errors.py  mcp_server.py  mcp_surface.py  models.py  paths.py  service.py  store.py
src/plainweave/: __init__.py  __main__.py  bindings.py  cli.py  cli_commands.py  envelopes.py  errors.py  intent_graph.py  loomweave_adapter.py  mcp_server.py  mcp_surface.py  models.py  paths.py  service.py  store.py  wardline_adapter.py
src/plainweave/web/: __init__.py  app.py  context.py  errors.py  (+2 more)
tests/: __init__.py  conftest.py  intent_coverage_contract.py  loomweave_contract.py  loomweave_test_utils.py  preflight_contract.py  test_cli.py  test_cli_baseline.py  test_cli_dossier.py  test_cli_intent_beta.py  test_cli_intent_coverage.py  test_cli_requirements_enrichment.py  test_cli_v0_1.py  test_cli_verification.py  test_cli_wardline_peer_facts.py  test_doctor.py  test_error_hints.py  test_init.py  test_intent_coverage.py  test_intent_graph_beta.py  test_loomweave_adapter.py  test_mcp_intent_coverage.py  test_mcp_read_surface.py  test_mcp_server.py  test_package.py  test_store_migrations.py  test_target_interface_stubs.py  test_target_interfaces.py  test_wardline_adapter.py  test_warpline_requirements_enrichment.py  wardline_contract.py  warpline_contract.py
tests/conformance/: test_sei_oracle.py
tests/contracts/: test_cli_contract_outputs.py  test_contract_fixtures.py  test_envelopes.py  test_filigree_contract.py  test_loomweave_contract.py  test_preflight_facts_wire_golden.py  test_requirements_enrichment_wire_golden.py  test_wardline_contract.py  test_wardline_peer_facts_wire_golden.py  test_warpline_contract.py
tests/state/: test_acceptance_criteria.py  test_actor_registry.py  test_baselines.py  test_requirement_dossiers.py  test_requirement_lifecycle.py  test_trace_links.py  test_verification_status.py
tests/web/: conftest.py  test_a11y_contracts.py  test_app.py  test_context.py  test_errors.py  test_goals.py  test_intent.py  test_requirements.py  test_review.py  test_security.py  test_server.py
(+92 files in other folders)
