[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "charter"
description = "Local-first requirements and verification authority for Loom"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dynamic = ["version"]
authors = [{ name = "John Morrissey" }]
keywords = ["requirements", "verification", "traceability", "mcp", "agent", "loom"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = []

[dependency-groups]
dev = [
    "coverage[toml]>=7.0",
    "mypy>=1.13.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]

[project.scripts]
charter = "charter.cli:main"

[project.urls]
Homepage = "https://github.com/foundryside-dev/charter"
Repository = "https://github.com/foundryside-dev/charter"
Issues = "https://github.com/foundryside-dev/charter/issues"

[tool.hatch.version]
path = "src/charter/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/charter"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/charter", "tests"]
mypy_path = ["src", "."]
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["charter"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
