[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plainweave"
description = "Code-up requirements traceability and intent corpus for the Weft federation — the permission-for-code-to-exist member."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dynamic = ["version"]
authors = [{ name = "John Morrissey" }]
keywords = ["requirements", "verification", "traceability", "intent", "mcp", "agent", "weft"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.2.0",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.0",
    "jinja2>=3.1.6",
    "mypy>=1.13.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]

[project.scripts]
plainweave = "plainweave.cli:main"
plainweave-mcp = "plainweave.mcp_server:main"

[project.urls]
Homepage = "https://github.com/foundryside-dev/plainweave"
Repository = "https://github.com/foundryside-dev/plainweave"
Issues = "https://github.com/foundryside-dev/plainweave/issues"
Changelog = "https://github.com/foundryside-dev/plainweave/blob/main/CHANGELOG.md"

[project.optional-dependencies]
web = [
    "starlette>=0.37",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]

[tool.hatch.version]
path = "src/plainweave/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/plainweave"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/plainweave", "tests"]
mypy_path = ["src", "."]
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
filterwarnings = [
    # Starlette TestClient emits a StarletteDeprecationWarning (a subclass of
    # DeprecationWarning) at import time when the legacy httpx package is installed
    # instead of httpx2.  This is a third-party warning outside our control; suppress
    # it until we can upgrade to httpx2.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*",
    # pytest-cov's coverage tracer triggers Python's ResourceWarning for SQLite
    # connections that are closed lazily by the GC rather than explicitly.  These
    # are pre-existing store-layer connections surfaced only under --cov; they do
    # not indicate a real data-loss risk.  Track the underlying leak separately.
    "ignore:unclosed database.*:ResourceWarning",
]
markers = [
    "sei_drift: opt-in release-gate recheck that the vendored SEI conformance oracle has not drifted from the upstream Loomweave checkout (run with -m sei_drift)",
]

[tool.coverage.run]
source = ["plainweave"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
